<resources>
    <string name="app_name">Instagram</string>
    <string name="input_login">Phone number, email or username</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="login_with_facebook">Log in with Facebook</string>
    <string name="forgot_login">Forgot your login details? <b><font color="#FF00376B">Get help logging in.</font></b></string>
    <string name="signup">Don\'t have an account? <b><font color="#FF00376B">Sign up.</font></b></string>
    <string name="or">OR</string>
    <string name="login">Already have an account? <b><font color="#FF00376B">Log in.</font></b></string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="name_and_password">name and password</string>
    <string name="full_name">Full name</string>
    <string name="without_contacts">Continue Without Syncing Contacts</string>
    <string name="contacts_text">Your contacts will be periodically synced and stored on Instagram servers to help you and others find friends, and to help us provide a better service. To remove contacts, go to Settings and disconnect. <b>Learn More</b></string>
    <string name="welcome">WELCOME TO INSTAGRAM,\n%s</string>
    <string name="welcome_about">Find people to follow and start sharing photos, You can change your username anytime.</string>
    <string name="change_username">Change username</string>
    <string name="condition">By clicking Next, you agree to our <b><font color="#FF00376B">Terms, Data Policy</font></b> and <b><font color="#FF00376B">Cookies Policy.</font></b></string>
    <string name="posts_count">%d</string>
    <string name="following_count">%d</string>
    <string name="followers_count">%d</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="home">home</string>
    <string name="search">search</string>
    <string name="camera">camera</string>
    <string name="stars">stars</string>
    <string name="profile">profile</string>
    <string name="test">%s %s</string>
    <string name="all_comments">View all %d comments</string>
    <string name="recent">Recent</string>
    <string name="search_bar">Search</string>
    <string name="new_post">New Post</string>
    <string name="gallery">Gallery</string>
    <string name="permission_necessary">Storage permission</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="get_from_gallery">Get photo from gallery</string>
    <string name="username_subtitle">Pick a username for your account. You can always change it later</string>
    <string name="username">Username</string>
</resources>