<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="118dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:gravity="center_horizontal"
                android:text="@string/name_and_password"
                android:textAllCaps="true" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_name"
                style="@style/InputForm"
                android:layout_marginStart="28dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="28dp"
                android:hint="@string/full_name" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_pass"
                style="@style/InputForm"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp"
                android:hint="@string/password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                style="@style/ButtonForm"
                android:layout_marginTop="16dp"
                android:text="@string/without_contacts" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>


    <FrameLayout
        android:id="@id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textview.MaterialTextView
            style="@style/TextForm"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:text="@string/contacts_text"
            android:textColor="@color/gray_text"
            android:textSize="@dimen/small_text" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>