<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:gravity="center"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextForm"
            android:text="@string/welcome_about"
            android:textSize="@dimen/medium_text" />

        <com.hakretcode.instagram.util.ProgressButton
            android:id="@+id/button"
            style="@style/ButtonForm"
            android:layout_marginTop="32dp"
            android:text="@string/next" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/textButton"
            style="@style/ButtonFbForm"
            android:text="@string/change_username"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textview.MaterialTextView
        android:id="@id/text"
        style="@style/TextForm"
        android:layout_width="0dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:text="@string/condition"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>