<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/profile_icon"
                app:tint="@color/black" />

            <com.google.android.material.tabs.TabLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email" />
            </com.google.android.material.tabs.TabLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_toggle"
                style="@style/InputLayoutForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="28dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_email"
                    style="@style/InputForm"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.hakretcode.instagram.util.ProgressButton
                android:id="@+id/progress_button"
                style="@style/ButtonForm"
                android:enabled="false"
                android:text="@string/next" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

    <FrameLayout
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_border" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextForm"
            android:padding="16dp"
            android:text="@string/login" />

    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>